<resources>
    <string name="app_name">reglogwdb</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="logoutbutton">Logout</string>
    <string name="show">Show</string>
    <string name="hide">hide</string>
    <string name="Hide">hide</string>
    <string name="Show">Show</string>
    <string name="username">username</string>
    <string name="phone_number">Phone Number</string>
    <string name="interests">interests</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="select_birth_time">Select Birth Time</string>
    <string name="philippines">Philippines</string>
    <string name="Username">Username</string>
    <string name="provincespinner">provinceSpinner</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="interest_desc">interest_desc</string>
    <string name="interest_s">Interest/s</string>
    <string name="email_or_username">Email or Username</string>
    <string name="forgot_password">forgot_password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="hello_world_app">Hello World App</string>
    <string name="calculator">Calculator</string>
    <string name="countries_flag_app">Countries\' Flag App</string>
    <string name="history">History</string>
    <string name="c">C</string>
    <string name="del">⌫</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
</resources>